loaded model for inference

--- a/Computer Vision projects/Sign recognition-German Traffic Sign Recognition dataset/traffic_signs-cnn.ipynb
+++ b/Computer Vision projects/Sign recognition-German Traffic Sign Recognition dataset/traffic_signs-cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -217,34 +217,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "500/500 [==============================] - 8s 14ms/step - loss: 2.3333 - accuracy: 0.3909\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 1.7439 - accuracy: 0.5542\n",
       "Epoch 2/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.4958 - accuracy: 0.8823\n",
+      "500/500 [==============================] - 6s 13ms/step - loss: 0.3355 - accuracy: 0.9277\n",
       "Epoch 3/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.2146 - accuracy: 0.9556\n",
+      "500/500 [==============================] - 6s 13ms/step - loss: 0.1653 - accuracy: 0.9672\n",
       "Epoch 4/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.1214 - accuracy: 0.9772\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.1024 - accuracy: 0.9815\n",
       "Epoch 5/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.0880 - accuracy: 0.9838\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0735 - accuracy: 0.9864\n",
       "Epoch 6/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.0692 - accuracy: 0.9860\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0559 - accuracy: 0.9902\n",
       "Epoch 7/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.0547 - accuracy: 0.9905\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0490 - accuracy: 0.9904\n",
       "Epoch 8/10\n",
-      "500/500 [==============================] - 7s 15ms/step - loss: 0.0332 - accuracy: 0.9956\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0335 - accuracy: 0.9944\n",
       "Epoch 9/10\n",
-      "500/500 [==============================] - 7s 14ms/step - loss: 0.0373 - accuracy: 0.9931\n",
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0384 - accuracy: 0.9922\n",
       "Epoch 10/10\n",
-      "500/500 [==============================] - 8s 15ms/step - loss: 0.0340 - accuracy: 0.9938\n"
+      "500/500 [==============================] - 7s 13ms/step - loss: 0.0384 - accuracy: 0.9912\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x259eedd6f10>"
+       "<keras.callbacks.History at 0x1e7b1da7a90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,23 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "333/333 - 2s - loss: 0.0573 - accuracy: 0.9850 - 2s/epoch - 5ms/step\n"
+      "333/333 - 1s - loss: 0.0562 - accuracy: 0.9851 - 1s/epoch - 4ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.05732319876551628, 0.9849849939346313]"
+       "[0.05619373917579651, 0.9850788116455078]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -337,26 +337,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 106ms/step\n"
+      "1/1 [==============================] - 0s 83ms/step\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "img = np.expand_dims(img, axis=0)\n",
     "prediction = loaded_model.predict(img)\n",
-    "prediction = labels[np.argmax(prediction)]"
+    "prediction = labels[np.argmax(prediction)]\n",
+    "print(prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 34ms/step\n"
+      "1/1 [==============================] - 0s 139ms/step\n"
      ]
     },
     {
@@ -393,7 +406,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,43 +414,6 @@
    "source": [
     "test_image = cv.imread(r\"test_img.jpg\")\n",
     "predict(test_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 37ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[9.2819755e-05, 7.5675605e-04, 3.1945172e-03, 3.4325055e-04,\n",
-       "        1.0505070e-02, 2.2476653e-02, 2.4390256e-03, 3.8926613e-02,\n",
-       "        3.3705770e-03, 1.9596710e-03, 3.4122325e-02, 2.5938606e-02,\n",
-       "        5.4830605e-01, 2.1332658e-03, 4.9278431e-04, 3.1147883e-03,\n",
-       "        8.6007186e-04, 2.5401392e-03, 7.3858355e-03, 4.9223516e-02,\n",
-       "        1.2436059e-02, 9.2538819e-03, 7.0363982e-04, 8.7791355e-03,\n",
-       "        2.3763282e-03, 5.4574744e-03, 3.0645439e-02, 2.4748927e-03,\n",
-       "        2.7583694e-04, 3.3268004e-03, 4.7979743e-04, 2.9600591e-03,\n",
-       "        1.3830564e-03, 2.5791850e-02, 1.3308160e-03, 1.2158466e-03,\n",
-       "        6.6571361e-03, 5.2210097e-03, 1.7157210e-03, 7.5908643e-03,\n",
-       "        9.1840930e-02, 3.8053265e-03, 1.6095757e-02]], dtype=float32)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loaded_model.predict(img)"
    ]
   }
  ],
